--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-
+{% import "_macros.html" as macros %}
 {% block title %}Flasky - {{ user.username }}{% endblock %}
 
 {% block page_content %}
@@ -17,21 +17,42 @@
     </p>
     {%endif%}
     {% if current_user.is_administrator() %}
-    <a class="btn btn-danger" href ="{{url_for('.edit_profile_admin',id=user.id) }}">Edit Profile[Admin]</a>
-
     <p><a href = "mailto: {{user.email}}">{{user.email}}</a></p>
     {%endif%}
     {% if user.about_me %}<p>{{user.about_me}}</p>{%endif%}
-    {% if user == current_user%}
-     <a  class="btn btn-default" href="{{url_for('.edit_profile')}}">
-        Edit Profile
-    </a>
-    {% endif %}
     <p>
         Member since {{moment(user.member_since).format('L')}}
         Last Seen {{moment(user.last_seen).format('L') }}.
     </p>
+    <p>
+        {% if not current_user.can(Permission.FOLLOW)and user!=current_user%}
+            {%if not current_user.is_following(user) %}
+                <a href="{{url_for('.follow',username=user.username)}}" class="btn btn-primary">Follow</a>
+            {%else%}
+                <a href="{{url_for('.unfollow',username=user.username)}}" class="btn btn-default">Unfollow</a>
+            {%endif%}
+        {%endif%}
+        <a href="{{url_for('.followers',username=user.username)}}">Followers;<span class="badge">{{user.followers.count()-1}}</span> </a>
+        <a href="{{url_for('.followed_by',username=user.username)}}">Following;<span class="badge">{{user.followed.count()-1}}</span></a>
+        {%if current_user.is_authenticated and user != current_user and user.is_following(current_user)%}
+        <span class="label label-default">Follows you</span>
+        {%endif%}
+    </p>
+    <p>
+    {% if user == current_user%}
+     <a  class="btn btn-default" href="{{url_for('.edit_profile')}}">
+        Edit Profile</a>
+        {%endif%}
+    {%if current_user.is_administrator()%}
+    <a class="btn btn-danger" href="{{url_for('.admin')}}">Admin ALl user[ADMIN]</a>
+    {% endif %}
+    </p>
 </div>
 <h3>Posts by {{user.username}}</h3>
 {% include '_posts.html'%}
+{%if pagination %}
+<div class="pagination">
+    {{macros.pagination_widget(pagination,'.user',username=username)}}
+</div>
+{%endif%}
 {%endblock%}
